[project]
name = "agentserver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langgraph>=0.5.4",
    "openai-agents[voice]>=0.2.2",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-instrumentation-logging>=0.56b0",
    "opentelemetry-sdk>=1.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-socks>=2.7.1",
    "uvicorn>=0.35.0",
]
