[project]
name = "agentserver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "aiohttp>=3.12.14",
    "base58>=2.1.1",
    "eth-account>=0.13.7",
    "fal-client>=0.7.0",
    "fastapi>=0.116.1",
    "jwt>=1.4.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "motor>=3.7.1",
    "openai>=1.97.0",
    "openai-agents[voice]>=0.2.2",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-instrumentation-logging>=0.56b0",
    "opentelemetry-sdk>=1.35.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pynacl>=1.5.0",
    "python-socks>=2.7.1",
    "redis==5.2.1",
    "uvicorn>=0.35.0",
]
